remove santa check

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         ul>li {
             margin-bottom: 10px;
-            list-style-image: url("assets/santa_small.png");
+            /*list-style-image: url("assets/santa_small.png");*/
             height: 59px;
         }
 
