add banjo capos

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
             <li><a target="_blank" href="https://a.co/d/21Np6UG">NETGEAR WiFi Router</a></li>
             <li>Business Casual Sweater [<a target="_blank" href="https://www.amazon.com/s?k=business+casual+sweater+men">Amazon</a>]</li>
             <li>Carhartt (save the reciept... their cloths can be weird sizes)</li>
+            <li><a href="https://a.co/d/5kYql0f">Banjo Capo 1</a></li>
+            <li><a href="https://a.co/d/6QlIBbv">Banjo Capo 2</a></li>
 
             <!--<li><div class="li-content"><a target="_blank" href="https://www.sparkfun.com/products/23551">Raspberry Pi</a></div></li>-->
             <!--<li><div class="li-content"><a target="_blank" href="https://a.co/d/fGQ3fJi">SwissGear Backpack</a></div></li>-->
